# internal/auth/dto.go
@@ -1,0 +1,15 @@
+package auth
+
+type SignUpRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
+
+type SignUpResponse struct {
+	Message string `json:"message"`
+}
+
+type SignInRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
